Add endpoints for group management
Add get groups
It returns all the groups (chats) a user is involved invites

Add get group invites
It returns all the group invites a user has received
